--- a/media_columns.html
+++ b/media_columns.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Really Important CSS Concepts</title>
   <link href='http://fonts.googleapis.com/css?family=Bitter:700|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/styles/reset.css">
-  <link rel="stylesheet" href="/styles/base.css">
-  <link rel="stylesheet" href="/styles/styles.css">
-  <link rel="stylesheet" href="/styles/demo.css">
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/demo.css">
 </head>
 <body>
   <div class="row clearfix">
